--- a/views/tradingView.html
+++ b/views/tradingView.html
@@ -1,8 +1,9 @@
-<button ng-click="login()">{{login_state}}</button><br>
-<input id="stockcode" placeholder="종목코드" autofocus>
-<button id="search" ng-click="login()">종목 검색</button>
-<button id="chart">차트 데이터 검색</button><br>
-<p>message : {{message}} </p>
+<button ng-click="trview.login()" ng-disabled="trview.isDisabled">{{trview.loginstate || '로그인'}}</button>
+  접속상태 : <em>{{trview.connection || '미연결 상태'}}</em><br>
+<input id="stockcode" ng-model="trview.code">
+<button id="search" ng-click="trview.search()">종목 검색</button>
+<button id="chart" ng-click="trview.chart()">차트 데이터 검색</button><br>
+message : {{trview.message}}
 
 
     
